Protocol & Docs CI (openapi artifact) 😜

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -76,6 +76,12 @@ jobs:
         with:
           path: publish/
 
+      - name: Upload OpenAPI artifact (for sync-protocol)
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-artifact
+          path: ${PUBLISH_DIR}/openapi.yaml
+
   deploy-pages:
     needs: build-openapi
     runs-on: ubuntu-latest
