--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,12 +9,11 @@ env:
   PUBLISH_DIR: docs
 
 jobs:
-  build-openapi:
+  all-in-one:
     runs-on: ubuntu-latest
-    outputs:
-      ref_slug: ${{ steps.slug.outputs.ref }}
-      raw_ref: ${{ steps.slug.outputs.raw }}
-      doc_path: ${{ steps.slug.outputs.path }}
+    permissions:
+      pages: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -35,114 +34,47 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libldap-dev libsasl2-dev
 
-      - name: Cache python + node + poetry + npm
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pip
-            ~/.cache/pypoetry
-            ~/.local/pipx
-            ~/.local/bin/poetry
-            node_modules
-          key: ${{ runner.os }}-ci-env-${{ hashFiles('poetry.lock', 'package-lock.json') }}
-
-      - name: Setup Python + pipx + poetry
+      - name: Setup Python + Poetry + Node.js
         run: |
-          pip install pipx
-          pipx ensurepath
-          pipx install poetry
-          pipx inject poetry poetry-plugin-export
+          pip install poetry
+          poetry self add poetry-plugin-export
           poetry install --no-interaction
-
-      - name: Setup Node.js + Redocly
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - run: npm i -D @redocly/cli
+          npm install -D @redocly/cli
 
       - name: Generate OpenAPI & Docs
         run: |
           poetry run python manage.py openapi > ${PUBLISH_DIR}/openapi.yaml
           npx @redocly/cli build-docs -o ${PUBLISH_DIR}/index.html ${PUBLISH_DIR}/openapi.yaml
 
-      - name: Prepare deployment folder structure
+      - name: Prepare folder structure for Pages + Protocol
         run: |
-          mkdir -p publish/${{ steps.slug.outputs.path }}
-          cp -r ${PUBLISH_DIR}/* publish/${{ steps.slug.outputs.path }}/
+          mkdir -p ./publish/${{ steps.slug.outputs.path }}
+          cp -r ${PUBLISH_DIR}/* ./publish/${{ steps.slug.outputs.path }}/
 
       - name: Generate Docs Index page
         run: bash .github/scripts/generate-index.sh
 
-      - name: Upload OpenAPI.yaml artifact for sync-protocol
-        uses: actions/upload-artifact@v4
-        with:
-          name: openapi-artifact
-          path: ${PUBLISH_DIR}/openapi.yaml
-
-      - name: Upload docs artifact for Pages step
-        uses: actions/upload-artifact@v4
-        with:
-          name: docs-publish-artifact
-          path: ${PUBLISH_DIR}/*
-
-  deploy-pages:
-    needs: build-openapi
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Download docs artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docs-publish-artifact
-          path: ./publish/
-
-      - name: Restructure folders for Pages deployment
-        run: |
-          mkdir -p ./publish/${{ needs.build-openapi.outputs.doc_path }}
-          mv ./publish/index.html ./publish/${{ needs.build-openapi.outputs.doc_path }}/index.html
-          mv ./publish/openapi.yaml ./publish/${{ needs.build-openapi.outputs.doc_path }}/openapi.yaml
-
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v4
         with:
           path: ./publish/
 
-  sync-protocol:
-    needs: build-openapi
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Checkout Protocol Repo
         uses: actions/checkout@v4
         with:
           repository: EvilFlowersCatalog/evilflowers-protocol
-          ref: ${{ needs.build-openapi.outputs.raw_ref }}
+          ref: ${{ steps.slug.outputs.raw_ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           path: protocol_repo
 
-      - name: Download OpenAPI artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: openapi-artifact
-          path: openapi/
-
-      - name: Push to Protocol Repo
+      - name: Sync OpenAPI to Protocol Repo
         run: |
           cd protocol_repo
           mkdir -p openapi metadata
-          cp ../openapi/openapi.yaml openapi/openapi.yaml
-          echo "${{ needs.build-openapi.outputs.raw_ref }}" > metadata/version.txt
+          cp ../${PUBLISH_DIR}/openapi.yaml openapi/openapi.yaml
+          echo "${{ steps.slug.outputs.raw_ref }}" > metadata/version.txt
           git config user.name "ci-bot"
           git config user.email "ci@evilflowers.org"
           git add .
-          git commit -m "Sync OpenAPI for ${{ needs.build-openapi.outputs.raw_ref }}"
-          git push origin ${{ needs.build-openapi.outputs.raw_ref }}
+          git commit -m "Sync OpenAPI for ${{ steps.slug.outputs.raw_ref }}" || echo "No changes to commit"
+          git push origin ${{ steps.slug.outputs.raw_ref }}
