--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,6 +44,7 @@ jobs:
           source .venv/bin/activate
           python3 -m ensurepip --upgrade
           pip install pipx
+          pipx ensurepath
           pipx install poetry
           pipx inject poetry poetry-plugin-export
           poetry config virtualenvs.in-project true
