--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -77,19 +77,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: EvilFlowersCatalog/evilflowers-protocol
-          ref: ${{ steps.slug.outputs.raw_ref }}
+          ref: ${{ needs.build-docs.outputs.raw_ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           path: protocol_repo
+          fetch-depth: 1
 
       # Sync OpenAPI.yaml to Protocol Repo
       - name: Sync OpenAPI to Protocol Repo
         run: |
           cd protocol_repo
           mkdir -p openapi metadata
-          cp ../${PUBLISH_DIR}/openapi.yaml openapi/openapi.yaml
-          echo "${{ steps.slug.outputs.raw_ref }}" > metadata/version.txt
+          cp ../openapi/openapi.yaml openapi/openapi.yaml
+          echo "${{ needs.build-docs.outputs.raw_ref }}" > metadata/version.txt
           git config user.name "ci-bot"
           git config user.email "ci@evilflowers.org"
           git add .
-          git commit -m "Sync OpenAPI for ${{ steps.slug.outputs.raw_ref }}" || echo "No changes to commit"
-          git push origin ${{ steps.slug.outputs.raw_ref }}
+          git diff-index --quiet HEAD || git commit -m "Sync OpenAPI for ${{ needs.build-docs.outputs.raw_ref }}"
+          git push origin ${{ needs.build-docs.outputs.raw_ref }}
