--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ email-validator = "^2.2"
 hiredis = "^3.0"
 celery = {version = "^5.4.0", extras = ["redis"]}
 setuptools = "*"
+kafka-python = "^2.1.3"
+minio = "^7.2.15"
 
 [tool.poetry.group.s3.dependencies]
 minio = "^7.2"
