--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,11 @@ MINIO_ROOT_USER=minio
 MINIO_ROOT_PASSWORD=Admin123
 MINIO_ACCESS_KEY=O8TgsPCaWvzvl6xR
 MINIO_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
+
+# Event broker
+# EVILFLOWERS_EVENT_BROKER=apps.events.services.CeleryEventExecutionService
+EVILFLOWERS_EVENT_BROKER=apps.events.services.KafkaEventExecutionService
+
+# Kafka
+KAFKA_HOST=127.0.0.1
+KAFKA_PORT=9092
