--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,6 @@ email-validator = "^2.2"
 hiredis = "^3.0"
 celery = {version = "^5.4.0", extras = ["redis"]}
 setuptools = "*"
-kafka-python = "^2.1.3"
-minio = "^7.2.15"
 
 [tool.poetry.group.s3.dependencies]
 minio = "^7.2"
@@ -53,6 +51,10 @@ wheel = "*"
 [tool.poetry.group.dev.dependencies]
 black = "^24.0"
 datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }
+
+
+[tool.poetry.group.manage_broker.dependencies]
+kafka-python = "^2.1.5"
 
 [tool.black]
 line-length = 119
