refactor transformers and test events

--- a/.env.example
+++ b/.env.example
@@ -67,8 +67,9 @@ MINIO_ACCESS_KEY=O8TgsPCaWvzvl6xR
 MINIO_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
 
 # Event broker
-# EVILFLOWERS_EVENT_BROKER=apps.events.services.CeleryEventExecutionService
-EVILFLOWERS_EVENT_BROKER=apps.events.services.KafkaEventExecutionService
+# EVILFLOWERS_EVENT_BROKER_EXECUTOR=apps.events.services.CeleryEventExecutionService
+EVILFLOWERS_EVENT_BROKER_EXECUTOR=apps.events.services.KafkaEventExecutionService
+EVILFLOWERS_EVENT_BROKER_TRANSFORMER=apps.events.transformers.DjangoDransformer
 
 # Kafka
 KAFKA_HOST=127.0.0.1
