--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,10 @@ wheel = "*"
 black = "^24.0"
 datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }
 
+
+[tool.poetry.group.manage_broker.dependencies]
+kafka-python = "^2.1.5"
+
 [tool.black]
 line-length = 119
 target-version = ['py312']
