--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -3,6 +3,7 @@ image:
   release: bookworm
   architecture: amd64
   variant: default
+  cmd: [ "/usr/src/app/conf/entrypoint.sh" ]
 
 source:
   downloader: debootstrap
@@ -11,16 +12,17 @@ source:
   variant: minbase
 
 targets:
-  lxd:
-    create_message: "Generated from distrobuilder in GitHub Actions"
-    expiry: 30d
-    profiles:
-      - default
+  lxc:
+    create_message: |
+      You just built a custom Debian image with Python 3.13.
 
 packages:
   manager: apt
+  update: true
+  cleanup: true
   sets:
-    build-deps:
+    - action: install
+      stages: [ build ]
       packages:
         - build-essential
         - libffi-dev
@@ -28,7 +30,7 @@ packages:
         - libldap-dev
         - libjpeg-dev
         - postgresql-server-dev-17
-    runtime:
+    - action: install
       packages:
         - python3
         - python3-pip
@@ -44,15 +46,23 @@ packages:
         - gnupg
 
 environment:
-  PYTHONDONTWRITEBYTECODE: "1"
-  PYTHONUNBUFFERED: "1"
-  PATH: "/root/.local/bin:$PATH"
-  GUNICORN_CMD_ARGS: "--workers 4 -b 0.0.0.0:8000"
+  variables:
+    - { key: PYTHONDONTWRITEBYTECODE, value: "1" }
+    - { key: PYTHONUNBUFFERED,      value: "1" }
+    - { key: PATH,                  value: "/root/.local/bin:$PATH" }
+    - { key: GUNICORN_CMD_ARGS,     value: "--workers 4 -b 0.0.0.0:8000" }
 
 files:
-  - source: .
+  - generator: copy
+    source: .
     path: /usr/src/app
-    excludes: [ "distrobuilder.yaml", ".git", ".github" ]
+  - generator: copy
+    source: conf/supervisor.conf
+    path: /etc/supervisord.conf
+  - generator: copy
+    source: conf/entrypoint.sh
+    path: /usr/src/app/conf/entrypoint.sh
+    mode: "0755"
 
 actions:
   - trigger: post-packages
@@ -61,7 +71,6 @@ actions:
         > /etc/apt/sources.list.d/pgdg.list
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
       apt-get update -y
-      apt-get install -y postgresql-client-17 postgresql-common
       echo 'INPUT ( libldap.so )' > /usr/lib/libldap_r.so
 
   - trigger: post-files
@@ -69,11 +78,8 @@ actions:
       python3 -m pip install --no-cache-dir --user -r /usr/src/app/requirements.txt
       date -I > /usr/src/app/BUILD.txt
       apt-get purge -y build-essential libffi-dev libsasl2-dev libldap-dev \
-        libjpeg-dev postgresql-server-dev-17
+                       libjpeg-dev postgresql-server-dev-17
       apt-get autoremove -y --purge
       apt-get clean
       rm -rf /var/lib/apt/lists/*
-
-run:
-  cmd: ["/usr/src/app/conf/entrypoint.sh"]
-  systemd: false
+      chmod +x /usr/src/app/conf/entrypoint.sh
