--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -1,9 +1,11 @@
+# distrobuilder.yaml – compatible with distrobuilder ≥ 3.1
+# Debian bookworm base, Python 3.13 runtime
+
 image:
   distribution: debian
   release: bookworm
   architecture: amd64
   variant: default
-  cmd: [ "/usr/src/app/conf/entrypoint.sh" ]
 
 source:
   downloader: debootstrap
@@ -13,16 +15,14 @@ source:
 
 targets:
   lxc:
-    create_message: |
-      You just built a custom Debian image with Python 3.13.
+    create_message: "EvilFlowersCatalog Debian based image (built via GitHub Actions)"
 
 packages:
   manager: apt
   update: true
   cleanup: true
   sets:
-    - action: install
-      stages: [ build ]
+    - stage: build
       packages:
         - build-essential
         - libffi-dev
@@ -30,8 +30,7 @@ packages:
         - libldap-dev
         - libjpeg-dev
         - postgresql-server-dev-17
-    - action: install
-      packages:
+    - packages:
         - python3
         - python3-pip
         - supervisor
@@ -48,9 +47,9 @@ packages:
 environment:
   variables:
     - { key: PYTHONDONTWRITEBYTECODE, value: "1" }
-    - { key: PYTHONUNBUFFERED,      value: "1" }
-    - { key: PATH,                  value: "/root/.local/bin:$PATH" }
-    - { key: GUNICORN_CMD_ARGS,     value: "--workers 4 -b 0.0.0.0:8000" }
+    - { key: PYTHONUNBUFFERED,       value: "1" }
+    - { key: PATH,                   value: "/root/.local/bin:$PATH" }
+    - { key: GUNICORN_CMD_ARGS,      value: "--workers 4 -b 0.0.0.0:8000" }
 
 files:
   - generator: copy
@@ -72,7 +71,6 @@ actions:
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
       apt-get update -y
       echo 'INPUT ( libldap.so )' > /usr/lib/libldap_r.so
-
   - trigger: post-files
     action: |
       python3 -m pip install --no-cache-dir --user -r /usr/src/app/requirements.txt
@@ -83,3 +81,7 @@ actions:
       apt-get clean
       rm -rf /var/lib/apt/lists/*
       chmod +x /usr/src/app/conf/entrypoint.sh
+
+run:
+  cmd: [ "/usr/src/app/conf/entrypoint.sh" ]
+  systemd: false
