--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -80,7 +80,7 @@ actions:
       apt-get clean
       rm -rf /var/lib/apt/lists/*
       chmod +x /usr/src/app/conf/entrypoint.sh
+  - trigger: post-files
+    action: |
+      /usr/src/app/conf/entrypoint.sh
 
-run:
-  command: ["/usr/src/app/conf/entrypoint.sh"]
-  systemd: false
