This is embarrassing 😢

--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -29,7 +29,6 @@ packages:
         - libsasl2-dev
         - libldap-dev
         - libjpeg-dev
-        - postgresql-server-dev
         - postgresql-client
     - action: install
       packages:
@@ -72,7 +71,7 @@ actions:
     action: |
       python3 -m pip install --no-cache-dir --user -r /usr/src/app/requirements.txt
       date -I > /usr/src/app/BUILD.txt
-      apt-get purge -y build-essential libffi-dev libsasl2-dev libldap-dev libjpeg-dev postgresql-server-dev
+      apt-get purge -y build-essential libffi-dev libsasl2-dev libldap-dev libjpeg-dev
       apt-get autoremove -y --purge
       apt-get clean
       rm -rf /var/lib/apt/lists/*
