--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -66,7 +66,7 @@ files:
 actions:
   - trigger: post-packages
     action: |
-      echo 'INPUT ( libldap.so )' > /usr/lib/libldap_r.so
+      sh -c "echo 'INPUT ( libldap.so )' > /usr/lib/libldap_r.so"
   - trigger: post-files
     action: |
       python3 -m pip install --no-cache-dir --user -r /usr/src/app/requirements.txt
