This is embarrassing 😢

--- a/distrobuilder.yaml
+++ b/distrobuilder.yaml
@@ -73,4 +73,4 @@ actions:
       #!/bin/sh
       python3 -m venv /opt/venv
       . /opt/venv/bin/activate
-      python3 -m pip install --no-cache-dir --user -r /usr/src/app/requirements.txt
+      python3 -m pip install --no-cache-dir -r /usr/src/app/requirements.txt
