Logging to output 🌤️

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -10,31 +10,36 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:gunicorn]
 directory=/usr/src/app
-command=/root/.local/bin/gunicorn -k gevent evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log --timeout 240
+command=/root/.local/bin/gunicorn -k gevent evil_flowers_catalog.wsgi --log-level=%(ENV_LOGLEVEL)s--timeout 240
 autostart=true
 autorestart=true
 redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
 
 [program:celery_event_handler]
 directory=/usr/src/app
 command=/usr/local/bin/python manage.py celery_event_handler
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/celery_event_handler.err.log
-stdout_logfile=/var/log/celery_event_handler.out.log
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
 
 [program:celery_worker]
 directory=/usr/src/app
-command=/root/.local/bin/celery -A evil_flowers_catalog.celery worker --loglevel=INFO
+command=/root/.local/bin/celery -A evil_flowers_catalog.celery worker --loglevel=%(ENV_LOGLEVEL)s
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/celery_worker.err.log
-stdout_logfile=/var/log/celery_worker.out.log
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
 
 [program:celery_beats]
 directory=/usr/src/app
-command=/root/.local/bin/celery -A evil_flowers_catalog.celery beat --loglevel=INFO -s /tmp/celerybeat-schedule
+command=/root/.local/bin/celery -A evil_flowers_catalog.celery beat --loglevel=%(ENV_LOGLEVEL)s -s /tmp/celerybeat-schedule
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/celery_beats.err.log
-stdout_logfile=/var/log/celery_beats.out.log
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
