--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -10,36 +10,32 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:gunicorn]
 directory=/usr/src/app
-command=/root/.local/bin/gunicorn -k gevent evil_flowers_catalog.wsgi --log-level=%(ENV_LOGLEVEL)s--timeout 240
+command=/root/.local/bin/gunicorn -k gevent evil_flowers_catalog.wsgi --log-level=%(ENV_LOGLEVEL)s --timeout 240
 autostart=true
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stderr_logfile=/dev/fd/2
+stderr_logfile=/var/log/gunicorn.err.log
+stdout_logfile=/var/log/gunicorn.out.log
 
 [program:celery_event_handler]
 directory=/usr/src/app
 command=/usr/local/bin/python manage.py celery_event_handler
 autostart=true
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stderr_logfile=/dev/fd/2
+stderr_logfile=/var/log/celery_event_handler.err.log
+stdout_logfile=/var/log/celery_event_handler.out.log
 
 [program:celery_worker]
 directory=/usr/src/app
 command=/root/.local/bin/celery -A evil_flowers_catalog.celery worker --loglevel=%(ENV_LOGLEVEL)s
 autostart=true
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stderr_logfile=/dev/fd/2
+stderr_logfile=/var/log/celery_worker.err.log
+stdout_logfile=/var/log/celery_worker.out.log
 
 [program:celery_beats]
 directory=/usr/src/app
 command=/root/.local/bin/celery -A evil_flowers_catalog.celery beat --loglevel=%(ENV_LOGLEVEL)s -s /tmp/celerybeat-schedule
 autostart=true
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stderr_logfile=/dev/fd/2
+stderr_logfile=/var/log/celery_beats.err.log
+stdout_logfile=/var/log/celery_beats.out.log
